# geckoterminal-rs

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  bin.rs  lib.rs  limits.rs  main.rs  validation.rs
src/types/: dex.rs  mod.rs  network.rs  ohlcv.rs  pool.rs  response.rs  simple.rs  token.rs  token_info.rs  trade.rs
