[package]
name = "geckoterminal-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RESTful asynchronous Rust client for GeckoTerminal API"
repository = "https://github.com/dineshpinto/geckoterminal-rs"
readme = "README.md"
keywords = ["geckoterminal", "rest", "api", "async", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = { version = "2.2.0" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }