[package]
name = "geckoterminal-rs"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "RESTful asynchronous Rust client for GeckoTerminal API"
repository = "https://github.com/dineshpinto/geckoterminal-rs"
readme = "README.md"
keywords = ["geckoterminal", "rest", "api", "async", "crypto"]

[lib]
name = "geckoterminal_rs"
path = "src/lib.rs"

[[bin]]
name = "geckoterminal_rs"
path = "src/bin.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = { version = "2.2.0" }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
more-asserts = "0.3.1"