[package]
name = "geckoterminal-rs"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "RESTful asynchronous Rust client for GeckoTerminal API"
repository = "https://github.com/dineshpinto/geckoterminal-rs"
readme = "README.md"
keywords = ["geckoterminal", "rest", "api", "async", "crypto"]

[lib]
name = "geckoterminal_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0.108"
log = "0.4.20"


[dev-dependencies]
cargo-tarpaulin = { version = "0.27" }
more-asserts = "0.3.1"
env_logger = "0.11.3"